[package]
name = "louis-migrate-yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libyaml = "0.2"
anyhow = "1.0"
clap = { version = "4.3.24", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
